pxc/tests/test_007_constr/udempty2.px
import core::common -;
public namespace udempty2;

pure struct foo(int i) {
  int iv = i;
  string sv = "hoge";
  function int m1(int i) {
    return iv + i + 100;
  }
}

pure struct bar() {
  int x;
  foo f = foo(3); // ok. struct bar has constr
}

pure struct baz {
  int x;
  foo f; // error
}

varray{bar} vb; # ok
bar b; # ok
baz bz; # error
println("ok");

